Finishin the mobile version

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
         <div class="tabs-grid">
           <div class="tabs-content" id="tab-bookmarking">
             <img src="./static/images/illustration-features-tab-1.svg" alt="">
-            <h2 class="u-h1">Bookmark in one click</h2>
+            <h2 class="u-h2">Bookmark in one click</h2>
             <p class="u-p">Organize your bookmarks however you like. Our simple drag-and-drop interface 
               gives you complete control over how you manage your favourite sites.</p>
           </div>
           <div class="tabs-content" id="tab-searching">
             <img src="./static/images/illustration-features-tab-2.svg" alt="">
-            <h2 class="u-h1">Intelligent search</h2>
+            <h2 class="u-h2">Intelligent search</h2>
             <p class="u-p">Our powerful search feature will help you find saved sites in no time at all. 
               No need to trawl through all of your bookmarks.</p>
           </div>
           <div class="tabs-content" id="tab-sharing">
             <img src="./static/images/illustration-features-tab-3.svg" alt="">
-            <h2 class="u-h1">Share your bookmarks</h2>
+            <h2 class="u-h2">Share your bookmarks</h2>
             <p class="u-p">Easily share your bookmarks and collections with others. Create a shareable 
               link that you can send at the click of a button.</p>
           </div>
@@ -106,79 +106,113 @@
       </div>
     </div>
   </section>
-  
-  More Info
 
-  Download the extension
+  <section class="download">
+    <div class="u-wrapper">
+      <h2 class="u-h2">Download the extension</h2>
+      <p class="u-p">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
+        got a favourite you’d like us to prioritize.</p>
+      <div class="download-grid">
+        <div class="download-item">
+          <img src="./static/images/logo-chrome.svg" alt="">
+          <h3 class="u-h3">Add to Chrome</h3>
+          <p class="u-p">Minimum version 62</p>
+          <button class="u-button is-fullWidth">Add & Install Extension</button>
+        </div> 
+        <div class="download-item">
+          <img src="./static/images/logo-firefox.svg" alt="">
+          <h3 class="u-h3">Add to Firefox</h3>
+          <p class="u-p">Minimum version 55</p>
+          <button class="u-button is-fullWidth">Add & Install Extension</button>
+        </div> 
+        <div class="download-item">
+          <img src="./static/images/logo-opera.svg" alt="">
+          <h3 class="u-h3">Add to Opera</h3>
+          <p class="u-p">Minimum version 46</p>
+          <button class="u-button is-fullWidth">Add & Install Extension</button>
+        </div> 
+      </div>
+    </div>
+  </section>
 
-  We’ve got more browsers in the pipeline. Please do let us know if you’ve 
-  got a favourite you’d like us to prioritize.
+  <section class="questions">
+    <div class="u-wrapper">
+      <h2 class="u-h2">Frequently Asked Questions</h2>
+      <p class="u-p">Here are some of our FAQs. If you have any other questions you’d like 
+        answered please feel free to email us.</p>
+      <div class="carousel">
+          <details class="carousel-detail">
+            <summary class="carousel-header">
+              What is Bookmark?
+            </summary>
+            <p class="u-p">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
+              justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+            </p>
+          </details>
+          <details class="carousel-detail">
+            <summary class="carousel-header">
+              How can I request a new browser?
+            </summary>
+            <p class="u-p">
+              Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
+              Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+              ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
+              Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+            </p>
+          </details>
+          <details class="carousel-detail">
+            <summary class="carousel-header">
+              Is there a mobile app?
+            </summary>
+            <p class="u-p">
+              Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
+              urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
+              sollicitudin ex et ultricies bibendum.
+            </p>
+          </details>
+          <details class="carousel-detail">
+            <summary class="carousel-header">
+              What about other Chromium browsers?
+            </summary>
+            <p class="u-p">
+              Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
+              vitae neque eget nisl gravida pellentesque non ut velit.
+            </p>
+          </details>
+      </div>
+      <button class="u-button">More Info</button>
+    </div>
+  </section>
 
-  Add to Chrome
-  Minimum version 62
-  Add & Install Extension
+  <section class="join">
+    <div class="u-wrapper">
+      <small>35,000+ already joined</small>
+      <h4 class="u-h4">Stay up-to-date with what we’re doing</h4>
+      <form action="" class="form">
+        <input type="text" placeholder="Enter your email address" class="form-input">
+        <input type="submit" value="Contact Us" class="u-button is-red is-fullWidth">
+      </form>
+    </div>
+  </section>
 
-  Add to Firefox
-  Minimum version 55
-  Add & Install Extension
-
-  Add to Opera
-  Minimum version 46
-  Add & Install Extension
-
-  Frequently Asked Questions
-  
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
-
-  <!-- Question 1 -->
-  What is Bookmark?
-
-  <!-- Answer 1 -->
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
-
-  <!-- Question 2 -->
-  How can I request a new browser?
-
-  <!-- Answer 2 -->
-  Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
-
-  <!-- Question 3 -->
-  Is there a mobile app?
-
-  <!-- Answer 3 -->
-  Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum.
-
-  <!-- Question 4 -->
-  What about other Chromium browsers?
-
-  <!-- Answer 4 -->
-  Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
-
-  More Info
-
-  35,000+ already joined
-
-  Stay up-to-date with what we’re doing
-
-  Contact Us
-
-  Features
-  Pricing
-  Contact
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+  <footer class="footer">
+    <img src="./static/images/logo-bookmark-footer.svg" alt="">
+    <ul>
+      <li>
+        <a href="#">Features</a>
+      </li>
+      <li>
+        <a href="#">Pricing</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </ul>
+    <div class="footer-social">
+      <a href="#" class="facebook"></a>
+      <a href="#" class="twitter"></a>
+    </div>
   </footer>
 </body>
 </html>
