--- a/index.html
+++ b/index.html
@@ -17,24 +17,23 @@
   <header class="header">
     <div class="u-wrapper">
       <div class="header-content">
-        <!-- <img src="./static/images/logo-bookmark.svg" alt=""> -->
         <a href="#" class="header-logo"></a>
         <label for="open" class="menu-open"></label>
         <nav class="menu">
           <div class="u-wrapper">
             <ul>
               <li>
-                <a href="#">
+                <a href="#features">
                   Features
                 </a>
               </li>
               <li>
-                <a href="#">
-                  Pricing
+                <a href="#download">
+                  Download
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#contact">
                   Contact
                 </a>
               </li>
@@ -52,18 +51,24 @@
 
   <section class="hero">
     <div class="u-wrapper">
-      <img class="hero-image" src="./static/images/illustration-hero.svg" alt="">
-      <h1 class="u-h1">A Simple Bookmark Manager</h1>
-      <p class="u-p">A clean and simple interface to organize your favourite websites. Open a new 
-        browser tab and see your sites load instantly. Try it for free.</p>
-      <div class="hero-buttons">
-        <button class="u-button">Get it on Chrome</button>
-        <button class="u-button is-grey">Get it on Firefox</button>
+      <div class="hero-grid">
+        <div class="hero-imageContainer">
+          <img class="hero-image" src="./static/images/illustration-hero.svg" alt="">
+        </div>
+        <div class="hero-content">
+          <h1 class="u-h1">A Simple Bookmark Manager</h1>
+          <p class="u-p">A clean and simple interface to organize your favourite websites. Open a new 
+            browser tab and see your sites load instantly. Try it for free.</p>
+          <div class="hero-buttons">
+            <button class="u-button">Get it on Chrome</button>
+            <button class="u-button is-grey">Get it on Firefox</button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="features">
+  <section class="features" id="features">
     <div class="u-wrapper">
       <h2 class="u-h2">Features</h2>
       <p class="u-p">Our aim is to make it quick and easy for you to access your favourite websites. 
@@ -86,28 +91,37 @@
         <div class="tabs-grid">
           <div class="tabs-content" id="tab-bookmarking">
             <img src="./static/images/illustration-features-tab-1.svg" alt="">
-            <h2 class="u-h2">Bookmark in one click</h2>
-            <p class="u-p">Organize your bookmarks however you like. Our simple drag-and-drop interface 
-              gives you complete control over how you manage your favourite sites.</p>
+            <div>
+              <h2 class="u-h2">Bookmark in one click</h2>
+              <p class="u-p">Organize your bookmarks however you like. Our simple drag-and-drop interface 
+                gives you complete control over how you manage your favourite sites.</p>
+              <button class="u-button">More Info</button>
+            </div>
           </div>
           <div class="tabs-content" id="tab-searching">
             <img src="./static/images/illustration-features-tab-2.svg" alt="">
-            <h2 class="u-h2">Intelligent search</h2>
-            <p class="u-p">Our powerful search feature will help you find saved sites in no time at all. 
-              No need to trawl through all of your bookmarks.</p>
+            <div>
+              <h2 class="u-h2">Intelligent search</h2>
+              <p class="u-p">Our powerful search feature will help you find saved sites in no time at all. 
+                No need to trawl through all of your bookmarks.</p>
+              <button class="u-button">More Info</button>
+            </div>
           </div>
           <div class="tabs-content" id="tab-sharing">
             <img src="./static/images/illustration-features-tab-3.svg" alt="">
-            <h2 class="u-h2">Share your bookmarks</h2>
-            <p class="u-p">Easily share your bookmarks and collections with others. Create a shareable 
-              link that you can send at the click of a button.</p>
+            <div>
+              <h2 class="u-h2">Share your bookmarks</h2>
+              <p class="u-p">Easily share your bookmarks and collections with others. Create a shareable 
+                link that you can send at the click of a button.</p>
+              <button class="u-button">More Info</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="download">
+  <section class="download" id="download">
     <div class="u-wrapper">
       <h2 class="u-h2">Download the extension</h2>
       <p class="u-p">We’ve got more browsers in the pipeline. Please do let us know if you’ve 
@@ -185,7 +199,7 @@
     </div>
   </section>
 
-  <section class="join">
+  <section class="join" id="contact">
     <div class="u-wrapper">
       <small>35,000+ already joined</small>
       <h4 class="u-h4">Stay up-to-date with what we’re doing</h4>
@@ -197,22 +211,26 @@
   </section>
 
   <footer class="footer">
-    <img src="./static/images/logo-bookmark-footer.svg" alt="">
-    <ul>
-      <li>
-        <a href="#">Features</a>
-      </li>
-      <li>
-        <a href="#">Pricing</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
-    </ul>
-    <div class="footer-social">
-      <a href="#" class="facebook"></a>
-      <a href="#" class="twitter"></a>
-    </div>
+      <div class="footer-content">
+        <div class="footer-primary">
+          <img src="./static/images/logo-bookmark-footer.svg" alt="">
+          <ul class="footer-menu">
+            <li>
+              <a href="#">Features</a>
+            </li>
+            <li>
+              <a href="#">Pricing</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <a href="#" class="facebook"></a>
+          <a href="#" class="twitter"></a>
+        </div>
+      </div>
   </footer>
 </body>
 </html>
